--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-router-dom": "^6.16.0",
     "react-tsparticles": "^2.12.2",
     "tsparticles-shape-image": "^2.12.0",
-    "tsparticles-slim": "^2.12.0",
-    "vite": "^4.4.5"
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
